--- a/src/p/src/style/common/com/card.styl
+++ b/src/p/src/style/common/com/card.styl
@@ -36,6 +36,8 @@
       padding: 20px;
       width: 100%;
       height: auto;
+      font-size: 18px;
+      line-height: 22px;
       font-smoothing: antialiased;
     }
   }
