设置卡片阴影

--- a/src/p/src/style/common/com/card.styl
+++ b/src/p/src/style/common/com/card.styl
@@ -12,7 +12,7 @@
     transition: all 0.4s ease-in-out;
     transform-style: preserve-flat;
     background: #ffffff;
-    box-shadow: 2px 2px 5px #1A4B67;
+    box-shadow: 1px 1px 0 #2951CF, 2px 2px 12px #162344;
     border-radius: 4px;
     position: absolute;
     top: 0px;
