--- a/src/p/src/style/common/main.styl
+++ b/src/p/src/style/common/main.styl
@@ -1,7 +1,19 @@
 @import 'reset'
 
 @import 'com/card'
+@import 'com/set'
 
 .hide {
 	display: none;
+}
+
+body {
+	width: 100%;
+	height: 100%;
+	position: relative;
+	#container {
+		width: 100%;
+		height: 100%;
+		position: relative;
+	}
 }
