--- a/src/p/src/style/setedit/main.styl
+++ b/src/p/src/style/setedit/main.styl
@@ -2,3 +2,23 @@ body {
 	background: #007BBE;
 	font-family: "微软雅黑";
 }
+
+.edit-item {
+	width: 100%;
+	min-height: 100px;
+}
+
+.side-textarea {
+	width: 400px; 
+    min-height: 22px; 
+    margin-left: auto; 
+    margin-right: auto; 
+    padding: 5px; 
+    outline: 0; 
+    border: 1px solid #a0b3d6; 
+    font-size: 20px; 
+    word-wrap: break-word;
+    overflow-x: hidden;
+    overflow-y: auto;
+    background: #ffffff;
+}
