--- a/src/p/src/style/setedit/main.styl
+++ b/src/p/src/style/setedit/main.styl
@@ -10,32 +10,52 @@ body {
 
 
 .cardeditbox {
-	width: 100%;
+	display: table;
+	margin: 10px;
+	width: 70%;
+	min-width: 500px;
+	background: red;
+	border: 1px solid #d6d2cb;
+	box-sizing: border-box;
+	table-layout: fixed;
+	min-height: 31px;
 }
 
 .auto-expand-textarea {
+	height: 100%;
 	position: relative;
+	display: table-cell;
+	box-sizing: border-box;
+	position: relative;
+	&.leftside {
+		border-right: 1px solid #d6d2cb;
+	}
 	> .holder, .textarea {
-		width: 50%;
+		width: 100%;
 		white-space: pre-wrap;
 		word-wrap: break-word;
   		font-smoothing: antialiased;
 		box-sizing: border-box;
 		font-family: "微软雅黑", "Helvetica Neue", Helvetica, Arial, sans-serif;
-		padding: 4px;
-		border: 1px solid #000000;
 		background: #ffffff;
 		appearance: none;
+		font-size: 14px;
+		line-height: 1.5;
+		border: 0px;
+		padding: 4px;
+		margin: 0px;
+		outline: none;
 	}
 	> .holder {
 		visibility: hidden;
 	}
 	> .textarea {
 		position: absolute;
+	  	height: 100%;
+	  	width: 100%;
+	  	resize: none;
 		top: 0;
 		left: 0;
-		height: 100%;
-		resize: none;
 		overflow: hidden;
 	}
 }
